--- a/step09/package.json
+++ b/step09/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^0.9.7",
     "googleapis": "^7.0.0",
     "morgan": "^1.7.0",
+    "nightmare": "^2.10.0",
     "sequelize": "^3.21.0",
     "sqlite3": "^3.1.3"
   },
