--- a/step09/package.json
+++ b/step09/package.json
@@ -15,9 +15,10 @@
     "body-parser": "~1.13.2",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
-    "google-auth-library": "^0.9.7",
-    "googleapis": "^7.0.0",
+    "google-auth-library": "^0.12.0",
+    "googleapis": "^7.1.0",
     "morgan": "^1.7.0",
+    "nightmare": "^2.10.0",
     "sequelize": "^3.21.0",
     "sqlite3": "^3.1.3"
   },
