--- a/step09/config.json
+++ b/step09/config.json
@@ -4,6 +4,6 @@
     "password": null,
     "host": "127.0.0.1",
     "dialect": "sqlite",
-    "storage": "db.sqlite"
+    "storage": "db3.sqlite"
   }
 }
