--- a/step09/package.json
+++ b/step09/package.json
@@ -22,7 +22,9 @@
     "morgan": "^1.7.0",
     "nightmare": "^2.10.0",
     "sequelize": "^3.21.0",
-    "sqlite3": "^3.1.3"
+    "sqlite3": "^3.1.3",
+    "url-exists": "^1.0.3",
+    "vo": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.9.1"
